# schp-human-parsing

./: .gitignore  .gitmodules  README.md  pyproject.toml
scripts/: benchmark.py  convert_checkpoint.py  download_checkpoints.py  download_images.py  export_onnx.py  push_to_hub.py  quantize_onnx.py  test_hub.py  test_onnx.py  test_pytorch.py  test_schp.py
